adicionando algumas funções para o jogo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
     <div class="board">
-        <div class="com" id="com"></div>
+        <div class="com" id="com">
+        </div>
+        <div class="actions">
+            <div id="countCom" class="countCom"></div>
+            
+            <div class="buttons">
+                <button class="buy" id="buy">Comprar</button>
+                <button class="stop" id="stop">Parar</button>
+            </div>
+            <div id="countPlayer" class="countPlayer"></div>
+        </div>
         <div class="player" id="player">
 
         </div>
