--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 </div>
                 <div class="bets">
                     
-                    <input type="button" value="5">
-                    <input type="button" value="10">
-                    <input type="button" value="15">
-                    <input type="button" value="20">
+                    <input type="button" value="5" class="betInput">
+                    <input type="button" value="10" class="betInput">
+                    <input type="button" value="15" class="betInput">
+                    <input type="button" value="20" class="betInput">
                 </div>
             </div>
             <div id="countPlayer" class="countPlayer">
